# TryoutOpenCV

./: CMakeLists.txt
include/: myClass.h
src/: main.cpp  myClass.cpp
